--- a/src/app/paciente-historicos/historico-social/cadastro-historico-social/cadastro-historico-social.component.css
+++ b/src/app/paciente-historicos/historico-social/cadastro-historico-social/cadastro-historico-social.component.css
@@ -2,3 +2,26 @@
     border: 2px solid rgba(209, 209, 209, 0.774);
     border-radius: 2px;
 }
+
+.imagem-coloracao-diurese-selecionada {
+    width: 16px;
+    vertical-align: middle;
+}
+
+.descricao-coloracao-diurese-selecionada {
+    vertical-align: middle; 
+    margin-left: .5em
+}
+
+.imagem-dropdown-coloracao-diurese {
+    width: 24px;
+    position: absolute;
+    top: 1px;
+    left: 5px
+}
+
+.descricao-dropdown-coloracao-diurese {
+    font-size: 14px;
+    margin-left: 40px;
+    margin-top: 4px
+}
