Adicionado validações para permissão de acesso

--- a/src/app/calendario-atendimento/calendario-atendimento.component.html
+++ b/src/app/calendario-atendimento/calendario-atendimento.component.html
@@ -15,14 +15,14 @@
                         <i class="fas fa-search" style="font-size: 1.18em;"></i>
                     </div>
 
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 text-right">
+                    <div *ngIf="usuarioAdmin" class="col-12 col-sm-6 col-md-6 col-lg-4 text-right">
                         <button class="btn btn-success px-5" (click)="abrirDialogCadastro()">
                             <i class="fas fa-plus"></i>
                             Cadastrar Período(s)
                         </button>
                     </div>
 
-                    <div class="col-lg-4">
+                    <div *ngIf="usuarioAdmin" class="col-lg-4">
                         <button class="btn px-5" style="background-color: #B32323; color: white;" (click)="abrirDialogExclusaoPeriodos()">
                             <i class="fas fa-trash"></i>
                             Excluir Períodos
@@ -50,7 +50,7 @@
                         <span class="ui-column-title text-left"></span>
                         {{ periodo[coluna.field] }}
         
-                        <span *ngIf="coluna.header === 'Ações'">
+                        <span *ngIf="coluna.header === 'Ações' && usuarioAdmin">
                             <button class="btn btn-danger" pTooltip="Excluir" tooltipPosition="bottom"
                                 [disabled]="periodo.periodoDisponivel === 'Não'" (click)="armazenarPeriodoParaExclusao(periodo)">
                                 <i class="fas fa-trash-alt"></i>
