--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,25 +12,25 @@
             <li class="nav-item active">
                 <a class="nav-link" [routerLink]="['/relatorios-graficos']">Relatórios & Gráficos</a>
             </li>
-            <li class="nav-item">
+            <li *ngIf="usuarioAdmin" class="nav-item">
                 <a class="nav-link" [routerLink]="['/medicamentos']">Medicamentos</a>
             </li>
-            <li class="nav-item">
+            <li *ngIf="usuarioAdmin" class="nav-item">
                 <a class="nav-link" [routerLink]="['/patologias']">Patologias</a>
             </li>
-            <li class="nav-item">
+            <li *ngIf="usuarioAdmin" class="nav-item">
                 <a class="nav-link" [routerLink]="['/suplementos']">Suplementos</a>
             </li>
         </ul>
 
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item mr-5">
+            <li *ngIf="usuarioAdmin" class="nav-item mr-5">
                 <a class="nav-link" [routerLink]="['/parametros-atendimento']">
                     <i class="fas fa-cog"></i>
                     Parâmetros do Sistema
                 </a>
             </li>
-            <li class="nav-item mr-2">
+            <li class="nav-item mr-3">
                 <div class="dropdown">
                     <button class="btn btn-secondary">
                         <i class="far fa-user"></i>
