--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -142,7 +142,7 @@
         </div>
     </div>
 
-    <div class="mt-5">
+    <div class="mt-5 mb-2">
         <div class="row">
             <div class="col-12 col-sm-6">
                 <button class="btn btn-danger" style="width: 100%;" (click)="exibirDialogCancelarConsulta = true"
