--- a/src/app/paciente-historicos/historico-social/cadastro-historico-social/cadastro-historico-social.component.html
+++ b/src/app/paciente-historicos/historico-social/cadastro-historico-social/cadastro-historico-social.component.html
@@ -252,7 +252,7 @@
         </div>
 
         <div *ngIf="imagemColoracaoDiureseSelecionada" class="mt-4 text-center">
-            <img [src]="imagemColoracaoDiureseSelecionada.icon" [style]="{width: '200px', height: '200px'}">
+            <img [src]="imagemColoracaoDiureseSelecionada.icon" class="imagem-coloracao-diurese-ampliada">
         </div>
     </div>
 
