--- a/src/app/atendimento-paciente/retorno-consulta/retorno-consulta.component.html
+++ b/src/app/atendimento-paciente/retorno-consulta/retorno-consulta.component.html
@@ -93,7 +93,7 @@
         </app-conduta-nutricional>
     </div>
 
-    <div class="mt-5">
+    <div class="mt-5 mb-2">
       <div class="row">
           <div class="col-12 col-sm-6">
               <button class="btn btn-danger" style="width: 100%;" (click)="exibirDialogCancelarRetornoConsulta = true"
