--- a/src/app/paciente-historicos/historico-social/cadastro-historico-social/cadastro-historico-social.component.css
+++ b/src/app/paciente-historicos/historico-social/cadastro-historico-social/cadastro-historico-social.component.css
@@ -6,22 +6,30 @@
 .imagem-coloracao-diurese-selecionada {
     width: 16px;
     vertical-align: middle;
+    border-radius: 50%;
 }
 
 .descricao-coloracao-diurese-selecionada {
     vertical-align: middle; 
-    margin-left: .5em
+    margin-left: .5em;
 }
 
 .imagem-dropdown-coloracao-diurese {
     width: 24px;
     position: absolute;
     top: 1px;
-    left: 5px
+    left: 5px;
+    border-radius: 50%;
 }
 
 .descricao-dropdown-coloracao-diurese {
     font-size: 14px;
     margin-left: 40px;
-    margin-top: 4px
+    margin-top: 4px;
+}
+
+.imagem-coloracao-diurese-ampliada {
+    width: 200px; 
+    height: 200px;
+    border-radius: 50%;
 }
