--- a/src/app/paciente-historicos/historico-social/fieldset-historico-social/fieldset-historico-social.component.html
+++ b/src/app/paciente-historicos/historico-social/fieldset-historico-social/fieldset-historico-social.component.html
@@ -2,8 +2,12 @@
     <p-header>
         Histórico Social
 
-        <span *ngIf="historicoEstaDesatualizado">
+        <span *ngIf="historicoEstaDesatualizado || !possuiHistorico">
             <i class="fas fa-exclamation-circle text-warning"></i>
+        </span>
+
+        <span *ngIf="!historicoEstaDesatualizado && possuiHistorico">
+            <i class="fas fa-check-circle text-success"></i>
         </span>
     </p-header>
 
@@ -77,7 +81,11 @@
 
             <ng-template pTemplate="summary">
                 <div class="col-12">
-                    Históricos Sociais encontrados: {{ previaHistoricosSociais ? previaHistoricosSociais.length : 0 }}
+                    <span *ngIf="previaHistoricosSociais && previaHistoricosSociais.length > 0">
+                        Históricos Sociais encontrados: {{ previaHistoricosSociais.length }}
+                    </span>
+
+                    <span *ngIf="!possuiHistorico" class="text-danger">{{ dataProximaAtualizacao }}</span>
                 </div>
                 
                 <div *ngIf="previaHistoricosSociais && previaHistoricosSociais.length > 0" class="col-12">
